# Calculator

./: CMakeLists.txt
res/: app_icon.aps  app_icon.rc  resources.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp
